feat: 调整 trace 部分单测case